--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
     color: #4d5ae5;
 }
 .garden{
-    font-family: "Raleway";
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
